--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,15 @@ body {
     text-decoration: none;
     width:60%;
     position: relative;
-    
-    z-index: 2;/* or fixed if sticky */
+    position: fixed;
+     top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; /* Change if needed */
+    padding: 15px 20px;
+    font-size: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+/* or fixed if sticky */
     justify-content: space-around;
 
 }
